--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@mui/styles": "^6.4.9",
+    "@mui/x-date-pickers": "^7.28.0",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.2",
+    "dayjs": "^1.11.13",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "next": "15.2.1",
